    with DEP-8 spec (i.e., if the 'Testsuite' field contains 'autopkgtest',
    then debian/tests/control *must* exist).
    - autopkgtest-pkg-ruby will be handled by autopkgtest and the implicit
      test control data that uses gem2deb-test-runner will be used.
  * improved "usage: " banner in several of the provided programs

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 15 Oct 2014 16:16:04 -0300

gem2deb (0.10) unstable; urgency=medium

  * gem2deb-test-runner: add '.' to $LOAD_PATH with --autopkgtest
  * dh-make-ruby won't create debian/tests/control anymore since autopkgtest
    will now auto-detect Ruby packages and assume an implicit tests
    definition. debian/tests/control.ex will be created instead, with comments
    explaining to either modify it and rename to control, or delete it.
  * dh-make-ruby: when test/ or spec/ exists, create debian/ruby-tests.rake
    with the appropriate rake invocation to run the tests, instead of being
    insecure and creating files all commented out.
  * install 'gem2deb/rake/testtask.rb' to gem2deb-test-runner instead of
    gem2deb
  * dh-make-ruby: generate uncommented Vcs-* headers in debian/control
  * dh-make-ruby: remove version qualifier from build-dependency on gem2deb to
    remove friction when backporting.

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 08 Sep 2014 14:07:02 -0300

gem2deb (0.9.1) unstable; urgency=medium

  * gem2deb-test-runner now Breaks/Replaces gem2deb < 0.9. (Closes: #759431)

 -- Cédric Boutillier <boutil@debian.org>  Wed, 27 Aug 2014 14:06:00 +0200

gem2deb (0.9.0) unstable; urgency=medium

  * Provide support for DEP-8 autopkgtest (Closes: #637917)
    + split out a gem2deb-test-runner binary package
    + add a Testsuite: autopkgtest field to template debian/control
    + add templates for debian/tests files to propose a syntax/load test
      (Closes: #645357) and run the test suite of the package
  * Make dh-make-ruby idempotent